package com.iljaknk.Game;

public enum Player_color
{
    RED, WHITE, BLACK, YELLOW, BLUE, GREEN, NONE
}
