package com.iljaknk;

public enum Move_type
{
    NONE, NORMAL, JUMP
}
