@startuml

title __WARCABY's Class Diagram__\n

  namespace  {
    namespace om.iljaknk {
      class com.iljaknk.App {
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Client_Server {
        class com.iljaknk.Client_Server.Warcaby_Player {
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Client_Server {
        class com.iljaknk.Client_Server.Warcaby_Server {
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        class com.iljaknk.Game.All_Players {
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        class com.iljaknk.Game.Game_engine {
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        class com.iljaknk.Game.Player {
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        enum Player_color {
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        namespace app_data {
          class com.iljaknk.Game.app_data.Board {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        namespace app_data {
          class com.iljaknk.Game.app_data.Board_Factory {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        namespace app_data {
          enum Move_type {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        namespace app_data {
          class com.iljaknk.Game.app_data.Piece {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      namespace Game {
        namespace app_data {
          class com.iljaknk.Game.app_data.node {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      class com.iljaknk.game_window_Controller {
      }
    }
  }
  

  namespace  {
    namespace om.iljaknk {
      class com.iljaknk.menu_window_Controller {
      }
    }
  }
  

  com.iljaknk.App -up-|> javafx.application.Application
  com.iljaknk.Game.Player o-- com.iljaknk.Game.Player_color : player_color
  com.iljaknk.Game.app_data.Board_Factory o-- com.iljaknk.Game.app_data.Board : sample
  com.iljaknk.Game.app_data.Piece -up-|> javafx.scene.layout.StackPane
  com.iljaknk.Game.app_data.Piece o-- com.iljaknk.Game.Player_color : color
  com.iljaknk.Game.app_data.Piece o-- com.iljaknk.Game.Player_color : enemy_home_color
  com.iljaknk.Game.app_data.node -up-|> javafx.scene.shape.Ellipse
  com.iljaknk.Game.app_data.node o-- com.iljaknk.Game.app_data.Piece : piece
  com.iljaknk.Game.app_data.node o-- com.iljaknk.Game.Player_color : type_of_home


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
